thule-ui-service/k8s/cit.yml
---
kind: Deployment
apiVersion: apps/v1
metadata:
  name: thule-ui-service
  namespace: thule
spec:
  replicas: 1
  selector:
    matchLabels:
      app: thule-ui-service
      namespace: thule
  template:
    metadata:
      labels:
        app: thule-ui-service
        namespace: thule
    spec:
      serviceAccountName: thule-ui-service-account
      containers:
        - name: thule-ui-service
          image: pooh:8082/thule-ui-service:1.0.0-SNAPSHOT
          imagePullPolicy: Always
          livenessProbe:
            httpGet:
              path: /actuator/health/liveness
              port: service-port
            initialDelaySeconds: 300
            periodSeconds: 30
            timeoutSeconds: 10
          ports:
            - containerPort: 8080
              name: service-port
          readinessProbe:
            httpGet:
              path: /actuator/health/readiness
              port: service-port
            periodSeconds: 30
            timeoutSeconds: 10
---
kind: Ingress
apiVersion: networking.k8s.io/v1beta1
metadata:
  annotations:
    kubernetes.io/ingress.allow-http: "false"
    kubernetes.io/ingress.class: nginx
    nginx.ingress.kubernetes.io/rewrite-target: /$2
    nginx.ingress.kubernetes.io/x-forwarded-prefix: "/thule-ui-service"
  name: thule-ui-service-ingress
  namespace: thule
spec:
  rules:
    - host: piglet
      http:
        paths:
          - path: /thule-ui-service(/|$)(.*)
            backend:
              serviceName: thule-ui-service
              servicePort: 80
  tls:
    - hosts:
        - piglet
      secretName: thule-application-secrets
---
kind: Service
apiVersion: v1
metadata:
  name: thule-ui-service
  namespace: thule
spec:
  type: NodePort
  ports:
    - port: 80
      targetPort: 8080
  selector:
    app: thule-ui-service
    namespace: thule
